--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,5 +32,5 @@ Remotes:
     github::eco4cast/score4cast,
     github::cboettig/minioclient,
     github::eco4cast/gefs4cast,
-    github::cboettig/aws.s3
+    github::cboettig/aws.s3,
     github::eco4cast/stac4cast
