--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
     ggiraph,
     patchwork,
     pak,
-    jsonlite
+    jsonlite,
+    stac4cast
 Remotes: 
     github::eco4cast/score4cast,
     github::cboettig/minioclient,
