--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Imports:
     patchwork,
     pak,
     jsonlite,
-    stac4cast
+    stac4cast,
+    reticulate
 Remotes: 
     github::eco4cast/score4cast,
     github::cboettig/minioclient,
