--- a/.github/workflows/catalog.yaml
+++ b/.github/workflows/catalog.yaml
@@ -22,8 +22,10 @@ jobs:
       - name: install deps
         shell: Rscript {0}
         run: remotes::install_deps(".", dep=TRUE)
-        run: |
-          apt install python3.10-venv
+
+      - name: install Python v-env
+        shell: bash
+        run: apt install python3.10-venv
 
       - name: Render
         shell: Rscript {0}
