--- a/.github/workflows/catalog.yaml
+++ b/.github/workflows/catalog.yaml
@@ -25,7 +25,7 @@ jobs:
 
       - name: install Python v-env
         shell: bash
-        run: apt install python3.10-venv
+        run: apt install python3-pip
 
       - name: Render
         shell: Rscript {0}
