--- a/.github/workflows/catalog.yaml
+++ b/.github/workflows/catalog.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-    container: rocker/cuda
+    container: rocker/ml-verse
     steps:
       - run: git config --system --add safe.directory '*'
 
