--- a/.github/workflows/catalog.yaml
+++ b/.github/workflows/catalog.yaml
@@ -22,6 +22,10 @@ jobs:
       - name: install deps
         shell: Rscript {0}
         run: remotes::install_deps(".", dep=TRUE)
+        
+      - name: install
+        run: |
+          pip install stac-check  
 
       - name: Render
         shell: Rscript {0}
